# cpp_course

(task_1)demonstrate_functions/: CMakeLists.txt  Painters.cpp  Painters.h  art_world.cpp
(task_11)convertation_from_string/: CMakeLists.txt  fromString.hpp
(task_2)simple_class/: CMakeLists.txt  Student.cpp  Student.h  main.cpp
(task_5)string/: CMakeLists.txt  String.cpp  String.h  main.cpp
(task_6)complex_digit/: CMakeLists.txt  ComplexDigit.cpp  ComplexDigit.h  SquareMatrix.cpp  SquareMatrix.h  main.cpp
(task_7)array/: Array.h  Array.hpp  CMakeLists.txt  TestType.h  TestType.hpp  functions.h  functions.hpp  main.cpp  printVal.h  printVal.hpp
(task_8)game_context/: CMakeLists.txt  main.cpp
(task_8)game_context/headers/: Animal.h  Bear.h  Man.h  ManBearPig.h  Pig.h  Unit.h  functions.h
(task_8)game_context/sourseFiles/: Animal.cpp  Bear.cpp  Man.cpp  ManBearPig.cpp  Pig.cpp  Unit.cpp
assembly/: CMakeList.txt  add.asm  hello.asm  mul.asm  sub.asm
big_integer/: CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp  my_vector.h  my_vector_impl.cpp  my_vector_impl.h
